doc: add the documentation for the facebook login
